--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_action_delete"
-        android:title="Delete"
+        android:title="@string/delete"
         android:visible="false"
         app:showAsAction="ifRoom"/>
 </menu>
