--- a/app/src/main/res/layout/task_item_row.xml
+++ b/app/src/main/res/layout/task_item_row.xml
@@ -5,6 +5,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical">
 
+    <ImageView
+        android:id="@+id/task_highlight_tag"
+        android:layout_width="3dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/task_checkbox"
+        android:layout_alignTop="@id/task_title"
+        android:layout_marginBottom="-5dp"
+        android:layout_marginTop="-10dp"
+        android:contentDescription="@string/color_tag"/>
+
     <TextView
         android:id="@+id/task_title"
         android:layout_width="match_parent"
@@ -43,5 +53,18 @@
         android:background="@android:drawable/ic_menu_delete"
         android:padding="20dp"
         android:visibility="gone"/>
+
+
+    <!--<ImageView-->
+        <!--android:id="@+id/imageView3"-->
+        <!--android:contentDescription="@string/color_tag"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_alignBottom="@id/task_title"-->
+        <!--android:layout_marginEnd="10dp"-->
+        <!--android:src="@drawable/circle"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--/>-->
 
 </RelativeLayout>
