--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,7 @@
         android:id="@+id/action_edit"
         android:orderInCategory="100"
         android:title="@string/action_edit"
+        android:visible="false"
         app:showAsAction="never"/>
     <item
         android:id="@+id/action_delete"
@@ -13,4 +14,9 @@
         android:title="@string/delete"
         android:visible="false"
         app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/action_delete_all"
+        android:title="@string/delete_all"
+        android:visible="true"
+        app:showAsAction="never"/>
 </menu>
